# libpoem

./: CMakeLists.txt  README
src/: CMakeLists.txt
src/libpoem/: CMakeLists.txt
src/libpoem/inc/poem/: circularBuffer.h  eInk_waveshare.h  error.h  gpio.h  gps.h  gps_ublox6.h  i2c.h  i2c_master.h  logging.h  lsm303dlhc.h  serial.h  si705x.h  spi.h  system.h
src/libpoem/inc/poem/efm8bb/: adc_efm8bb.h  efm8bb_initDevice.h  i2c_efm8bb.h  pins_efm8bb.h  system_efm8bb.h
src/libpoem/inc/poem/nRF5/: custom_board.h  error_nRF5.h  i2c_app_nRF5.h  i2c_dev_nRF5.h  i2c_twiManager.h  nrf_drv_config.h  sdk_config.h  serial_app_nRF5.h  spi_nrf5.h  system_nRF5.h
src/libpoem/inc/poem/unix/: error_unix.h  serial_unix.h  system_unix.h
src/libpoem/src/: circularBuffer.c  error.c  lsm303dlhc.c  serial.c  si705x.c  system.c  ubloxTest.c
src/libpoem/src/efm8bb/: adc_efm8bb.c  efm8bb_initDevice.c  i2c_efm8bb.c  pins_efm8bb.c  system_efm8bb.c
src/libpoem/src/nRF5/: error_nrf.c  gpio_nRF5.c  i2c_app_nRF5.c  i2c_dev_nRF5.c  i2c_master_twiManager.c  logging_nRF5.c  serial_nRF5_app.c  serial_nRF5_hal.c  serial_nrf51822_app.c  spi_nrf5.c  system_nRF5.c
src/libpoem/src/uBlox6/: gps_ublox6.c
src/libpoem/src/unix/: error_unix.c  logging_unix.c  serial_unix.c  system_unix.c
src/libpoem/src/waveshare/: eInk_waveshare.c
src/libpoem/test/: gpsTest.c  testpoem.c
src/libpoem/test/nRF5/: #logTest.c#  #serialWrite.c#  gpsTest.c  lsm303test.c  serialRead.c  serialWrite.c
src/libpoem/test/unix/: gpsTest.c
